fix/menu tablet items spacing

--- a/_sass/_designers-italia.scss
+++ b/_sass/_designers-italia.scss
@@ -410,8 +410,8 @@ html {
       padding-right: 3.2rem !important;
       padding-left: 3.2rem !important;
       @media screen and (max-width: 1150px) {
-        padding-right: 1.2rem !important;
-        padding-left: 1.2rem !important;
+        padding-right: 2rem !important;
+        padding-left: 2rem !important;
       }
 
       &.is-current {
